--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - ":9000"
     volumes:
-        - ./src/:/var/www/html
+        - ./:/var/www/html
 
   nginx:
     image: nginx
